# A_maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  maze_generator.py  mazegen_bestteam-0.1.0-py3-none-any.whl  pyproject.toml  renderer.py  test.txt
mazegen/: __init__.py  __init__.py:Zone.Identifier  maze_generator.py  renderer.py
mazegen_bestteam/: maze_generator.py  pathfinder.py
